gts-macros/tests/compile_fail/version_mismatch_minor_missing_schema.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, or gtsId) of type GtsInstanceId OR a GTS Type field (one of: type, gts_type, gtsType, or schema) of type GtsSchemaId
  --> tests/compile_fail/version_mismatch_minor_missing_schema.rs:13:12
   |
13 | pub struct BaseEventV3_0 {
   |            ^^^^^^^^^^^^^
